# nslib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.org  agents.md
cmake/: nslib.cmake  shaders.cmake
samples/: CMakeLists.txt
samples/01_basic_window/: CMakeLists.txt
samples/01_basic_window/src/: basic_window.cpp
samples/02_input_keymaps/: CMakeLists.txt
samples/02_input_keymaps/src/: input_keymaps.cpp  nohup.out
samples/03_triangle/: CMakeLists.txt
samples/03_triangle/src/: triangle.cpp
samples/03_triangle/src/shaders/: triangle.frag  triangle.vert
samples/04_containers/src/: containers.cpp
samples/05_pack_unpack/src/: pack_unpack.cpp
samples/basic_window/src/: basic_window.cpp
samples/containers/src/: containers.cpp
samples/input_keymaps/src/: input_keymaps.cpp
samples/pack_unpack/src/: pack_unpack.cpp
samples/rdev/src/: rdev.cpp
samples/rdev/src/shaders/: fwd-color.frag  fwd-color.vert  fwd-diffuse.frag  fwd-diffuse.vert  rdev.frag  rdev.vert
samples/triangle/src/: triangle.cpp
src/: archive_common.h  asset.h  basic_type_traits.h  basic_types.h  binary_archive.h  cJSON.c  cJSON.h  gltf.cpp  gltf.h  handle.h  hashfuncs.cpp  hashfuncs.h  input_kmcodes.h  input_mapping.cpp  input_mapping.h  json_archive.cpp  json_archive.h  logging.c  logging.cpp  logging.h  mem.cpp  memory.cpp  memory.h  model.cpp  model.h  osdef.h  platform.cpp  platform.h  profile_timer.cpp  profile_timer.h  render_handles.h  renderer.cpp  renderer.h  rid.h  robj_common.cpp  robj_common.h  sim_region.cpp  sim_region.h  stb_image.cpp  stb_rect_pack.cpp  (+11 more)
src/containers/: array.h  cjson.c  hashmap.cpp  hashmap.h  hashset.h  hmap.h  hset.h  ihashmap.cpp  ihashmap.h  linked_list.h  slot_pool.h  string.cpp  string.h  variant.h
src/imgui/: imconfig.h  imgui_internal.h
src/math/: algorithm.cpp  algorithm.h  bounding_box.h  matrix2.h  matrix3.h  matrix4.cpp  matrix4.h  mtype_common.h  primitives.cpp  primitives.h  quaternion.h  vector2.h  vector3.h  vector4.h
src/noble-steed/: CMakeLists.txt  basic_types.h  buffer.h  input_kmcodes.h  input_mapping.cpp  input_mapping.h  linked_list.h  mem.cpp  mem.h  platform.cpp  platform.h  profile_timer.cpp  profile_timer.h
src/noble-steed/math/: algorithm.cpp  algorithm.h  bounding_box.h  matrix2.h  matrix3.h  matrix4.cpp  matrix4.h  primitives.cpp  primitives.h  quaternion.h  vector2.h  vector3.h  vector4.h
src/nslib/: CMakeLists.txt  basic_types.h  buffer.h  input_kmcodes.h  input_mapping.cpp  input_mapping.h  linked_list.h  logging.c  logging.h  mem.cpp  mem.h  platform.cpp  platform.h  profile_timer.cpp  profile_timer.h  vkrenderer.cpp  vkrenderer.h
src/nslib/containers/: array.h  hashmap.cpp  hashmap.h
src/nslib/math/: algorithm.cpp  algorithm.h  matrix3.h  quaternion.h  vector2.h  vector3.h  vector4.h
src/shaders/: rdev.vert
